added logging, validation
