# docs/swagger.json
@@ -53,6 +53,175 @@
                         "default": 1,
                         "description": "Page number for pagination",
                         "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size for pagination",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.GetAllResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "description": "Adds a new song to the system.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Add a new song",
+                "parameters": [
+                    {
+                        "description": "Request body for adding a song",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.AddRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created\"  header(X-Created-ID)",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/v1/songs/{songID}": {
+            "put": {
+                "description": "Update a song by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Update a song by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Song ID to update",
+                        "name": "songID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Song update request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.UpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Remove a song by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Remove a song by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Song ID to remove",
+                        "name": "songID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/v1/songs/{songID}/text": {
+            "get": {
+                "description": "Get song text with pagination",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "songs"
+                ],
+                "summary": "Get song text with pagination",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Song ID",
+                        "name": "songID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number for pagination",
+                        "name": "page",
                         "in": "query"
                     },
                     {
@@ -67,29 +236,38 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/song.GetAllResponse"
+                            "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.GetTextResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/domainerr.BadRequest"
-                        }
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
         }
     },
     "definitions": {
-        "domainerr.BadRequest": {
+        "effective-mobile-tz_internal_domain_dto_server_song.AddRequest": {
             "type": "object",
+            "required": [
+                "group",
+                "song"
+            ],
             "properties": {
-                "description": {
-                    "type": "string"
+                "group": {
+                    "type": "string",
+                    "minLength": 1
+                },
+                "song": {
+                    "type": "string",
+                    "minLength": 1
                 }
             }
         },
-        "song.GetAllHelper": {
+        "effective-mobile-tz_internal_domain_dto_server_song.GetAllHelper": {
             "type": "object",
             "properties": {
                 "group": {
@@ -112,14 +290,60 @@
                 }
             }
         },
-        "song.GetAllResponse": {
+        "effective-mobile-tz_internal_domain_dto_server_song.GetAllResponse": {
             "type": "object",
             "properties": {
                 "songs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/song.GetAllHelper"
+                        "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.GetAllHelper"
                     }
+                }
+            }
+        },
+        "effective-mobile-tz_internal_domain_dto_server_song.GetTextHelper": {
+            "type": "object",
+            "properties": {
+                "verse": {
+                    "type": "string"
+                }
+            }
+        },
+        "effective-mobile-tz_internal_domain_dto_server_song.GetTextResponse": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/effective-mobile-tz_internal_domain_dto_server_song.GetTextHelper"
+                    }
+                }
+            }
+        },
+        "effective-mobile-tz_internal_domain_dto_server_song.UpdateRequest": {
+            "type": "object",
+            "required": [
+                "group",
+                "link",
+                "releaseData",
+                "song",
+                "text"
+            ],
+            "properties": {
+                "group": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "releaseData": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         }
