# internal/domain/dto/server/song/remove.go
@@ -1,0 +1,7 @@
+package song
+
+import "effective-mobile-tz/internal/domain/model"
+
+type RemoveRequest struct {
+	ID model.SongID `uri:"songID" binding:"required" validate:"required,gte=1"`
+}
