# pkg/domain/dto/server/song/add.go
@@ -1,6 +1,0 @@
-package song
-
-type AddRequest struct {
-	Group string `json:"group"`
-	Song  string `json:"song"`
-}
